2008-08-15  Noel O'Boyle  <baoilleach@gmail.com>

	* windows-vc2005/openbabel.sln: Removed from repository
	* windows-vc2005/*/*.vcproj: Set optimization to /O2 and whole program
	optimization to true

2008-08-14  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/Makefile.am: Generate a jar file for the Java SWIG bindings
	* scripts/java/README, OBTest.java: Updated

2008-07-19  Michael Banck  <mbanck@gmx.net>

	* src/formats/opendxformat.cpp: Rename theGaussianCubeFormat global
	variable to theOpenDXCubeFormat.

	* src/formats/CMakeLists.txt: Added opendxformat to formats.

2008-07-11  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-ruby.i: Updated the interface file to allow access
	to OBFingerprint. Needed to ignore DescribeBits, which was causing
	problems.

2008-07-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/fingerprint.h, src/fingerprint.cpp: Make
	sure that __builtin_popcount is only exposed for GCC 3.4 or later.

2008-07-03  Noel O'Boyle  <baoilleach@gmail.com>

	* windows-vc2005/OBPythonOBF/setup.py: Update setup.py to include
	forcefield files when installing

2008-07-03  Michael Banck  <mbanck@gmx.net>

	* scripts/Makefile.am (dist-hook): Do not fail if make distclean does
	not succeed in the perl and ruby directories.
	* scripts/Makefile.in: Regenerated.

	* data/Makefile.am (table_DATA): Added plugindefines.txt.
	* data/Makefile.in: Regenerated.
	* data/CMakelists.txt: Removed space-groups.xsl from to_install.

	* test/cmlreadfile.cpp: Read files from TESTDATADIR, not relative to
	current directory.
	* test/wrapper.sh: Use ${srcdir}, not ${top_srcdir} to set
	$BABEL_DATADIR.
	* test/wrapper.sh: Run inchi tests from source directory if ${srcdir}
	is non-empty.  Set and export TESTDATADIR.

2008-07-03  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/ruby/README: Updated build instructions

2008-07-03  Michael Banck  <mbanck@gmx.net>

	* src/CMakelists.txt (LIBRARY_VERSION): New variable.