@@ -53,10 +53,10 @@ java/openbabel_java.cpp: openbabel-java.i $(script_headers)
 	$(SWIG) -small -O -java -package org.openbabel \
 	  -outdir java/org/openbabel -naturalvar -templatereduce -c++ -o $@ \
 	  -I$(top_srcdir)/include -I$(top_builddir)/include $<;
-	$(JAVAHOME)/bin/javac org/openbabel/*.java
-	(cd java; find . -name '*.class' -print > classes.list)
-	(cd java; $(JAVAHOME)/bin/jar cf openbabel.jar @classes.list)
-        (cd java; rm -rf org)
+	$(JAVA_HOME)/bin/javac java/org/openbabel/*.java
+	(cd java; ls org/openbabel/*.class > classes.list)
+	(cd java; $(JAVA_HOME)/bin/jar cf openbabel.jar @classes.list)
+        (cd java; rm -rf org classes.list)
 
 csharp/openbabel_csharp.cpp: openbabel-csharp.i $(script_headers)
 	$(SWIG) -small -O -csharp -naturalvar -templatereduce -c++ -o $@ \
